2003-02-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tkEvent.c (Tk_HandleEvent): Fixup button
	press state saving code, it was incorrectly converting
	normal motion events into button press and motion
	events in some cases.
	* generic/tkInt.h: Add mouseButtonWindow member
	to the TkDisplay structure.
	* tests/event.test: Add test case for faulty
	button motion logic.

2003-02-15  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/Makefile.in:
	* win/Makefile.in: Add TCL_DBGX so that the
	build works with --enable-symbols.

2003-02-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure: Regen.
	* win/configure.in: Set CC and CFLAGS when
	compiling with VC++. Call AC_CANONICAL_HOST.

2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure: Regen.
	* win/configure.in: Set the c preprocessor and
	executable extensions to work around problems
	that autoconf 2.13 has with VC++.

2002-09-13  Keith Seitz  <keiths@redhat.com>

	From Mo Dejong  <supermo@bayarea.net>:
	* win/tkWinWm.c (Tk_WmCmd): Check the WM_NEVER_MAPPED
	flag while processing the wm deiconify command.
	The WM_UPDATE_PENDING flag should never be set when
	WM_NEVER_MAPPED is set, but double check so that
	the implementation is more explicit and matches
	the comment just above.
	Return without invoking TkWmRestackToplevel or
	TkSetFocusWin on a toplevel that has never been
	mapped. This fixes a bug where a toplevel is mapped
	with the wrong size and is then resized by the
	idle call to MapFrame.

2002-07-31  Keith Seitz  <keiths@redhat.com>

	* win/winMain.c (main): Ifdef out for cygwin.

	* win/tcl.m4 (SC_CONFIG_CFLAGS): Add TK_DLL_BASE variable
	to define DLL image bases on cygwin.
	Do not link with "-e _WinMain@16" on cygwin.
	* win/configure.in (TK_DLL_BASE): Substitute into makefile.
	* win/configure: Regenerated.
	* win/Makefile.in: Use TK_DLL_BASE to build DLLs.

2002-07-31  Keith Seitz  <keiths@redhat.com>

	From Mo DeJong  <supermo@bayarea.net>